--- a/基础算法/再遇跳表.md
+++ b/基础算法/再遇跳表.md
@@ -90,11 +90,11 @@
 
 6. 插入元素6，根据索引，查询路径为：h2->h1->3->3->4，发现4的下一个元素7比6大，所以6放在4和7之间，然后决定要不要形成索引，假如随机决定说我要形成索引，而且我也要形成2级索引，这时候就很麻烦了，在形成6这个元素的索引时，需要修改3->9和h2->9这两条线，结果如下图：
 
-![image-20211223151005357](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20211223151005357.png)
+![image-20220102232443993](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20220102232443993.png)
 
 7. 最后，插入元素8和10，都无惊无喜，没有产生任何索引，所以最终的结果是：
 
-![image-20211223151034661](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20211223151034661.png)
+![image-20220102232528825](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20220102232528825.png)
 
 从上面可知，跳表是一个非常随意的数据结构，即使按照同样的顺序重复插入一遍元素，生成的跳表也可能完全不一样，就是这么任性。
 
@@ -104,10 +104,12 @@
 
 删除时，首先也要查找到元素，但是有一点小小的区别，比如删除6这个元素时，我们不能从h2->6->6->6这个路径过来，因为从这个路径过来，删除第一层的索引6后，无法修复3->9（写代码时再深入理解），所以删除元素时只能走h2->h1->3->3->4->6这条路径，且把途中每一层最后经过的索引记住，才能在删除了6这个元素之后正确地修复各层的索引。删除6之后的样子如下图：
 
-![image-20211223151156376](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20211223151156376.png)
+![image-20220102232619031](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20220102232619031.png)
 
 Java的跳表ConcurrentSkipListMap中，不管是查找、插入还是删除，都是走的跟删除相同的查找路径，其实这里可以简单地优化一下，如下图所示，查找和插入时完全可以走另一条路径。
 
-![image-20211223151220829](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20211223151220829.png)
+![image-20220102232718950](https://cdn.jsdelivr.net/gh/YuanAaron/BlogImage/2021/image-20220102232718950.png)
 
 如果有兴趣，可以查看我的ConcurrentSkipListMap源码分析这篇文章。
+
+至此，我们通过一步一图的方式完整清晰地展示了跳表的查询、插入、删除的全过程。
